# flux2-eval

./: AGENTS.md  CLAUDE.md  README.md  app.py  log1.txt  pyproject.toml  sample_prompts.txt  server.py  setup.sh
.claude/agents/: performance-auditor.md
benchmarks/: benchmark.py  decode_images.sh  run_bench.py  run_serial.sh
flux2_eval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
openspec/changes/archive/2026-05-28-deploy-flux2-dev-scalability-eval/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-28-deploy-flux2-dev-scalability-eval/specs/gpu-parallelism/: spec.md
openspec/changes/archive/2026-05-28-deploy-flux2-dev-scalability-eval/specs/load-testing/: spec.md
openspec/changes/archive/2026-05-28-deploy-flux2-dev-scalability-eval/specs/metrics-collection/: spec.md
openspec/changes/archive/2026-05-28-deploy-flux2-dev-scalability-eval/specs/model-serving/: spec.md
openspec/specs/gpu-parallelism/: spec.md
openspec/specs/load-testing/: spec.md
openspec/specs/metrics-collection/: spec.md
openspec/specs/model-serving/: spec.md
sessions/: session-Opus48_says.md  session-reduce-over_vs_max-autotune.md
