[project]
name = "flux2-eval"
version = "0.1.0"
description = "FLUX.2-dev scalability evaluation platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "diffusers>=0.32.0",
    "transformers>=4.45.0",
    "accelerate>=1.0.0",
    "bitsandbytes>=0.44.0",
    "aiohttp>=3.10.0",
    "pillow>=10.0.0",
    "python-multipart>=0.0.9",
    "huggingface-hub>=0.25.0",
    "sentencepiece>=0.2.0",
    "protobuf>=5.28.0",
]

[tool.setuptools]
py-modules = ["app", "server", "benchmark"]
